--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,19 @@ data/levels/more/
 *.zip
 *.diff
 
+# Android
+.gradle
+mk/android/app/.cxx
+mk/android/app/local.properties
+mk/android/app/proguard-rules.pro
+mk/android/app/src/main/java/org/libsdl/
+mk/android/gradle.properties
+mk/android/gradle/wrapper/gradle-wrapper.jar
+mk/android/gradlew
+mk/android/gradlew.bat
+mk/android/local.properties
+mk/android/settings.gradle
+
 # Flatpak
 .flatpak-builder/
 *.flatpak
