--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,73 +32,35 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [arm64-v8a, armeabi-v7a, x86, x86_64]
+        # UNCOMMENT ME WHEN DONE, JUST CONVENIENCE
+        arch: [arm64-v8a] #[arm64-v8a, armeabi-v7a, x86, x86_64]
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set script permissions
-        run: chmod +x ./.ci_scripts/*.sh
-
-      - name: Use cached dependencies
-        id: use-dependencies
-        uses: actions/cache/restore@v3
-        with:
-          path: ./build.android/app/jni/
-          key: Android-${{ matrix.arch }}-dependencies-${{ hashFiles('.github/workflows/android.yml') }}
-
       - name: Prepare SDL Android project
         if: steps.use-dependencies.outputs.cache-hit != 'true'
         run: |
-          ./.ci_scripts/clone_dependency.sh libsdl-org/SDL release-2.26.5
-          mv ./SDL/android-project/ ./build.android
-          mv ./SDL/ ./build.android/app/jni/SDL
-
-      - name: Clone dependencies
-        working-directory: build.android/app/jni
-        if: steps.use-dependencies.outputs.cache-hit != 'true'
-        run: |
-          ../../../.ci_scripts/clone_dependency.sh libsdl-org/SDL_image release-2.6.3
-          ../../../.ci_scripts/clone_dependency.sh libsdl-org/SDL_ttf release-2.20.2
-          ../../../.ci_scripts/clone_dependency.sh curl/curl curl-8_0_1
-          ../../../.ci_scripts/clone_dependency.sh glennrp/libpng v1.6.39
-          ../../../.ci_scripts/clone_dependency.sh janbar/openssl-cmake master
-          ../../../.ci_scripts/clone_dependency.sh kcat/openal-soft 1.23.1
-          ../../../.ci_scripts/clone_dependency.sh fmtlib/fmt 9.1.0
-          ../../../.ci_scripts/clone_dependency.sh g-truc/glm 0.9.9.8
-          ../../../.ci_scripts/clone_dependency.sh xiph/vorbis v1.3.7
-          ../../../.ci_scripts/clone_dependency.sh xiph/ogg v1.3.5
-          ln -s ../../../ supertux
-
-      - name: Cache dependencies
-        id: cache-dependencies
-        uses: actions/cache/save@v3
-        with:
-          path: ./build.android/app/jni/
-          key: Android-${{ matrix.arch }}-dependencies-${{ hashFiles('.github/workflows/android.yml') }}
-
-      - name: Copy SuperTux Android project files
-        run: |
-          cp -r -f ./mk/android/* ./build.android/
+          ./tools/bootstrap-android-project.sh 2.32.10
 
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: 20
+          java-version: 21
           cache: 'gradle'
 
       - name: Setup Android enviroment
         uses: android-actions/setup-android@v2
         with:
           packages: |
-            platforms;android-33
-            ndk;25.2.9519653
-            build-tools;33.0.2
+            platforms;android-35
+            ndk;29.0.14206865
+            build-tools;35.0.0
 
       - name: Build APK
-        working-directory: build.android
+        working-directory: mk/android/
         run: |
           chmod +x ./gradlew
           ./gradlew assembleRelease -Pcpuarch="${{ matrix.arch }}" --info
@@ -107,10 +69,10 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: "Unsigned APK ${{ matrix.arch }}"
-          path: "build.android/app/build/outputs/apk/release/app-release-unsigned.apk"
+          path: "mk/android/app/build/outputs/apk/release/app-release-unsigned.apk"
 
       - name: Sign APK
-        working-directory: build.android/app/build/outputs/apk/release
+        working-directory: mk/android/app/build/outputs/apk/release
         run: |
           # removing possible confusion
           cp ./app-release-unsigned.apk ./app-release.apk
@@ -118,7 +80,7 @@ jobs:
           keytool -genkey -v \
           -keystore supertux.keystore -alias supertux \
           -storepass supertux \
-          -dname "cn=MatusGuy, ou=Contributor, O=SuperTux Team, L=Antarctica, ST=Antarctica, C=aq" \
+          -dname "cn=MatusBro, ou=Contributor, O=SuperTux Team, L=Antarctica, ST=Antarctica, C=aq" \
           -keyalg RSA -keysize 2048 -validity 10000
 
           $ANDROID_SDK_ROOT/build-tools/33.0.2/apksigner sign \
@@ -129,4 +91,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: "Signed APK ${{ matrix.arch }}"
-          path: "build.android/app/build/outputs/apk/release/app-release.apk"
+          path: "mk/android/app/build/outputs/apk/release/app-release.apk"
