--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,9 +41,13 @@ jobs:
 
       - name: Bootstrap custom VCPKG
         env:
-          VCPKG_ROOT: ${{ env.VCPKG_INSTALLATION_ROOT }}
+          VCPKG_ROOT: ${{ github.workspace }}/vcpkg
         run: |
-          vcpkg install --triplet arm64-android \
+          git clone https://github.com/microsoft/vcpkg.git $VCPKG_ROOT
+          cd vcpkg
+          ./bootstrap-vcpkg.sh
+
+          ./vcpkg install --triplet arm64-android \
           fmt libogg libvorbis libraqm freetype physfs glm libpng zlib \
           sdl2 sdl2-image curl openal-soft libogg libvorbis
 
