--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -47,7 +47,7 @@ jobs:
           cd vcpkg
           ./bootstrap-vcpkg.sh
 
-          ./vcpkg install --triplet arm64-android \
+          ./vcpkg install --classic --triplet=arm64-android \
           fmt libogg libvorbis libraqm freetype physfs glm libpng zlib \
           sdl2 sdl2-image curl openal-soft libogg libvorbis
 
