--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,6 +38,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          # Fetch the whole tree so git describe works
+          fetch-depth: 0
+          submodules: recursive
 
       - name: Bootstrap custom VCPKG
         env:
