--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,8 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # UNCOMMENT ME WHEN DONE, JUST CONVENIENCE
-        arch: [arm64-v8a] #[arm64-v8a, armeabi-v7a, x86, x86_64]
+        arch: [arm64-v8a, armeabi-v7a, x86, x86_64]
     runs-on: ubuntu-latest
 
     steps:
@@ -49,7 +48,7 @@ jobs:
         run: |
           case "${{ matrix.arch }}" in
             arm64-v8a) export VCPKG_TRIPLET=arm64-android ;;
-            armeabi-v7a) export VCPKG_TRIPLET=arm-android ;;
+            armeabi-v7a) export VCPKG_TRIPLET=arm-neon-android ;;
             x86) export VCPKG_TRIPLET=x86-android ;;
             x86_64) export VCPKG_TRIPLET=x64-android ;;
             *) exit 67 ;;
