--- a/mk/android/app/src/main/AndroidManifest.xml
+++ b/mk/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="org.lethargik.supertux2" android:versionCode="7" android:versionName="0.7.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:installLocation="auto">
 
 	<!-- OpenGL ES 2.0 -->
 	<uses-feature android:glEsVersion="0x00020000"/>
@@ -46,13 +48,22 @@
 
 		 An example Java class can be found in README-android.md
 	-->
-	<application android:label="@string/app_name" android:allowBackup="true" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:hardwareAccelerated="true">
+	<application android:label="@string/app_name"
+    android:allowBackup="true"
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+    android:hardwareAccelerated="true"
+    android:icon="@mipmap/ic_launcher">
 
 		<!-- Example of setting SDL hints from AndroidManifest.xml:
 		<meta-data android:name="SDL_ENV.SDL_ACCELEROMETER_AS_JOYSTICK" android:value="0"/>
 		 -->
 
-		<activity android:name=".MainActivity" android:alwaysRetainTaskState="true" android:screenOrientation="landscape" android:launchMode="singleInstance" android:configChanges="layoutDirection|locale|orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation" android:exported="true" android:label="">
+		<activity android:name=".MainActivity"
+      android:alwaysRetainTaskState="true"
+      android:screenOrientation="landscape"
+      android:launchMode="singleInstance"
+      android:configChanges="layoutDirection|locale|orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
+      android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
