--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,7 +35,7 @@ jobs:
         arch: [arm64-v8a, armeabi-v7a, x86, x86_64]
     runs-on: ubuntu-latest
     env:
-      UPERTUX_VERSION: v0.7.0
+      SUPERTUX_VERSION: v0.7.0
       SDL_TAG: 2.32.10
       B_T_VERSION: 35.0.0
       NDK_VERSION: 29.0.14206865
@@ -123,7 +123,7 @@ jobs:
       - name: Rename APK
         run: |
           mv mk/android/app/build/outputs/apk/release/app-release-unsigned.apk \
-            mk/android/app/build/outputs/apk/release/SuperTux-${UPERTUX_VERSION}-${{ matrix.arch }}-unsigned.apk
+            mk/android/app/build/outputs/apk/release/SuperTux-${SUPERTUX_VERSION}-${{ matrix.arch }}-unsigned.apk
 
       ### Not really a point, but kept around for now
       #
@@ -131,7 +131,7 @@ jobs:
       #   uses: actions/upload-artifact@v4
       #   with:
       #     name: "Unsigned APK ${{ matrix.arch }}"
-      #     path: "mk/android/app/build/outputs/apk/release/SuperTux-${UPERTUX_VERSION}-${{ matrix.arch }}-unsigned.apk"
+      #     path: "mk/android/app/build/outputs/apk/release/SuperTux-${{ env.SUPERTUX_VERSION }}-${{ matrix.arch }}-unsigned.apk"
 
       - name: Fetch keys
         working-directory: mk/android/app/build/outputs/apk/release
@@ -158,7 +158,7 @@ jobs:
               -keyalg RSA -keysize 2048 -validity 10000
           fi
 
-          cp ./SuperTux-${UPERTUX_VERSION}-${{ matrix.arch }}-unsigned.apk ./SuperTux-${UPERTUX_VERSION}-${{ matrix.arch }}.apk
+          cp ./SuperTux-${SUPERTUX_VERSION}-${{ matrix.arch }}-unsigned.apk ./SuperTux-${SUPERTUX_VERSION}-${{ matrix.arch }}.apk
 
           if [[ "${{ secrets.ANDROID_SIGNING_KEY }}" ]]
           then
@@ -166,7 +166,7 @@ jobs:
               --ks supertux.keystore \
               --ks-key-alias supertux \
               --ks-pass pass:"${{ secrets.ANDROID_SIGNING_PW }}" \
-              ./SuperTux-${UPERTUX_VERSION}-${{ matrix.arch }}.apk
+              ./SuperTux-${SUPERTUX_VERSION}-${{ matrix.arch }}.apk
           else
             # More fallback logic; our key should exist
             echo "!!! WARNING: Signing with manual CI key. Check your shit ;-/"
@@ -174,11 +174,12 @@ jobs:
               --ks supertux.keystore \
               --ks-key-alias supertux \
               --ks-pass pass:hunter2 \
-              ./SuperTux-${UPERTUX_VERSION}-${{ matrix.arch }}.apk
+              ./SuperTux-${SUPERTUX_VERSION}-${{ matrix.arch }}.apk
           fi
 
       - name: Upload signed APK
         uses: actions/upload-artifact@v4
         with:
           name: "Signed SuperTux APK ${{ matrix.arch }}"
-          path: "mk/android/app/build/outputs/apk/release/SuperTux-${UPERTUX_VERSION}-${{ matrix.arch }}.apk"
+          path: "mk/android/app/build/outputs/apk/release/SuperTux-${{ env.SUPERTUX_VERSION }}-${{ matrix.arch }}.apk"
+
