--- a/.tx/config
+++ b/.tx/config
@@ -37,3 +37,12 @@ minimum_perc           = 75
 replace_edited_strings = false
 keep_translations      = false
 
+[o:arctic-games:p:supertux:r:revenge-in-redmond]
+file_filter            = data/levels/revenge_in_redmond/<lang>.po
+source_file            = data/levels/revenge_in_redmond/messages.pot
+source_lang            = en
+type                   = PO
+minimum_perc           = 75
+replace_edited_strings = false
+keep_translations      = false
+
