--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -212,7 +212,7 @@ jobs:
           IS_WINDOWS: true
 
       - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/') && matrix.release && github.repository_owner == 'supertux'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.release
         uses: softprops/action-gh-release@v1
         with:
           files: |
